Refactoring Html relatable names
Refactoring html names
Fixing Text Bug that causes Stack Overflow
Adding more tests

--- a/src/test/resources/expected/PageAggregatorTests/NoInput.html
+++ b/src/test/resources/expected/PageAggregatorTests/NoInput.html
@@ -14,4 +14,4 @@ function loadPage(url) {
 function navigate(url) {
     window.history.pushState({}, '', url)
     loadPage(url)
-}</script><script>console.log('Resource not found: /scripts/requester.js')</script></head><body><div id='app'></div></body><script>loadPage('/')</script></html>
+}</script></head><body><div id="app"></div></body><script>loadPage("/")</script></html>
