Client Side Routing Legacy Support
Adding support for Template and Function client side routing based on user agent version, OS and custom header

--- a/src/test/resources/expected/PageAggregatorTests/OneInput.html
+++ b/src/test/resources/expected/PageAggregatorTests/OneInput.html
@@ -14,4 +14,14 @@ function loadPage(url) {
 function navigate(url) {
     window.history.pushState({}, '', url)
     loadPage(url)
-}</script><script>registerPage("/", () => { return `<div>Hello from Page 1.</div>`})</script></head><body><div id="app"></div></body><script>loadPage("/")</script></html>
+}
+</script><script>registerPage("/", () => { return `<div>Hello from Page 1.</div>`})</script></head><body><div id="app"></div></body><script>function checkTemplateSupport() {
+    if ("content" in document.createElement("template")) {
+
+    }
+    else {
+        document.getElementById("app").innerHTML = "Your browser does not support templates."
+    }
+}
+checkTemplateSupport()
+</script><script>loadPage("/")</script></html>
