--- a/src/test/resources/expected/PageAggregatorTests/NoInput.html
+++ b/src/test/resources/expected/PageAggregatorTests/NoInput.html
@@ -14,4 +14,14 @@ function loadPage(url) {
 function navigate(url) {
     window.history.pushState({}, '', url)
     loadPage(url)
-}</script></head><body><div id="app"></div></body><script>loadPage("/")</script></html>
+}
+</script></head><body><div id="app"></div></body><script>function checkTemplateSupport() {
+    if ("content" in document.createElement("template")) {
+
+    }
+    else {
+        document.getElementById("app").innerHTML = "Your browser does not support templates."
+    }
+}
+checkTemplateSupport()
+</script><script>loadPage("/")</script></html>
