--- a/src/test/resources/expected/PageAggregatorTests/NoInput.html
+++ b/src/test/resources/expected/PageAggregatorTests/NoInput.html
@@ -1,13 +1,14 @@
-<html><head><script>var pages = {}
-
-function registerPage(url, renderFunction) {
-    pages[url] = renderFunction
-}
-
-function loadPage(url) {
-    const page = pages[url]
-    if (page) {
-        document.getElementById("app").innerHTML = page()
+<html><head><script>function loadPage(url) {
+    const templates = document.getElementsByTagName("template")
+    const template = templates["page-" + url]
+    if (template) {
+        const page = template.content.cloneNode(true)
+        const app = document.getElementById("app")
+        page.childNodes.forEach(node => { app.appendChild(node) })
+    }
+    else {
+        // TODO: 404 page
+        console.log("Page not found: " + url)
     }
 }
 
