--- a/src/test/resources/expected/PageAggregatorTests/NoInput_Legacy.html
+++ b/src/test/resources/expected/PageAggregatorTests/NoInput_Legacy.html
@@ -1,27 +1,1 @@
-<html><head><script>var pages = {}
-
-function registerPage(url, renderFunction) {
-    pages[url] = renderFunction
-}
-
-function loadPage(url) {
-    const page = pages[url]
-    if (page) {
-        document.getElementById("app").innerHTML = page()
-    }
-}
-
-function navigate(url) {
-    window.history.pushState({}, '', url)
-    loadPage(url)
-}
-</script></head><body><div id="app"></div></body><script>function checkTemplateSupport() {
-    if ("content" in document.createElement("template")) {
-
-    }
-    else {
-        document.getElementById("app").innerHTML = "Your browser does not support templates."
-    }
-}
-checkTemplateSupport()
-</script><script>loadPage("/")</script></html>
+<html><head><script src="/scripts/requester.js"></script></script><script src="/scripts/router-legacy.js"></script></head><body><div id="app"></div></body></html>
