--- a/src/test/resources/expected/PageAggregatorTests/OneInput.html
+++ b/src/test/resources/expected/PageAggregatorTests/OneInput.html
@@ -1,28 +1,1 @@
-<html><head><script>function loadPage(url) {
-    const templates = document.getElementsByTagName("template")
-    const template = templates["page-" + url]
-    if (template) {
-        const page = template.content.cloneNode(true)
-        const app = document.getElementById("app")
-        page.childNodes.forEach(node => { app.appendChild(node) })
-    }
-    else {
-        // TODO: 404 page
-        console.log("Page not found: " + url)
-    }
-}
-
-function navigate(url) {
-    window.history.pushState({}, '', url)
-    loadPage(url)
-}
-</script><template id="page-/"><div>Hello from Page 1.</div></template></head><body><div id="app"></div></body><script>function checkTemplateSupport() {
-    if ("content" in document.createElement("template")) {
-
-    }
-    else {
-        document.getElementById("app").innerHTML = "Your browser does not support templates."
-    }
-}
-checkTemplateSupport()
-</script><script>loadPage("/")</script></html>
+<html><head><script src="/scripts/requester.js"></script><script src="/scripts/templateChecker.js"></script><script src="/scripts/router.js"></script><template id="page-/"><div>Hello from Page 1.</div></template></head><body><div id="app"></div></body></html>
