--- a/src/test/resources/expected/PageAggregatorTests/NoInput.html
+++ b/src/test/resources/expected/PageAggregatorTests/NoInput.html
@@ -1,1 +1,1 @@
-<html><head><script src="/scripts/requester.js"></script><script src="/scripts/templateChecker.js"></script><script src="/scripts/router.js"></script></head><body><div id="app"></div></body></html>
+<html><head><script src="/scripts/router.js"></script><script></script><script>/*Global script*/</script></head><body></body></html>
