Added JavaScript functionallity
Added a way to call functions and away for them
As well as to call EventHandlers on demand
Fixed error reporting in contract execution
Fixed tests

--- a/src/test/resources/expected/PageAggregatorTests/OneInput.html
+++ b/src/test/resources/expected/PageAggregatorTests/OneInput.html
@@ -1,1 +1,1 @@
-<html><head><script src="/scripts/router.js"></script><template id="page-/"><div>Hello from Page 1.</div></template><script></script><script>/*Global script*/</script></head><body></body></html>
+<html><head><meta charset="UTF-8"><script src="/scripts/router.js"></script><script src="/scripts/requester.js"></script><template id="page-/"><div>Hello from Page 1.</div></template><script></script><script>/*Global script*/</script><script>/*Variables*/const _SHORT_VARIABLES_ = {};</script></head><body></body></html>
