--- a/src/test/resources/expected/PageAggregatorTests/NoInput.html
+++ b/src/test/resources/expected/PageAggregatorTests/NoInput.html
@@ -1,1 +1,1 @@
-<html><head><script src="/scripts/router.js"></script><script></script><script>/*Global script*/</script></head><body></body></html>
+<html><head><meta charset="UTF-8"><script src="/scripts/router.js"></script><script src="/scripts/requester.js"></script><script></script><script>/*Global script*/</script><script>/*Variables*/const _SHORT_VARIABLES_ = {};</script></head><body></body></html>
